# kmwarp

./: CLAUDE.md  Cargo.toml  IDEAS.md  LICENSE  PLAN.md  README.md  SECURITY.md  kmwarp-SPEC.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/client/: Cargo.toml
crates/client/src/: app.rs  discovery.rs  error.rs  lib.rs  main.rs  sink.rs  tls.rs
crates/client/src/net/: connection.rs  mod.rs  pairing.rs  pump.rs
crates/client/src/platform/: mod.rs
crates/client/src/platform/windows/: clipboard.rs  cursor_watch.rs  dpi.rs  inject.rs  inject_error.rs  mod.rs  pairing_dialog.rs  tray.rs
crates/client/src/service/: mod.rs  windows_service.rs
crates/client/tests/: stuck_key_recovery.rs
crates/client/wix/: main.wxs
crates/core/: Cargo.toml
crates/core/src/: clipboard.rs  config.rs  error.rs  lib.rs  modmap.rs  pairing.rs  platform.rs  stuck_keys.rs
crates/core/src/edge/: mod.rs
crates/core/src/hid/: macos.rs  mod.rs  windows.rs
crates/core/src/pairing/: mod.rs
crates/core/src/tls/: cert.rs  mod.rs  pin.rs  verifier.rs
crates/core/src/wire/: codec.rs  convert.rs  mod.rs
crates/core/tests/: edge_transitions.rs  hid_tables.rs  m9_crypto.rs  modifier_remap.rs  wire_roundtrip.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  discovery.rs  error.rs  lib.rs  main.rs  tls.rs
crates/server/src/net/: connection.rs  mod.rs  pairing.rs  pump.rs
crates/server/src/platform/: mod.rs
crates/server/src/platform/macos/: clipboard.rs  inject.rs  m2_demo.rs  m5_demo.rs  mod.rs  permissions.rs  tap.rs  tap_error.rs
crates/server/src/service/: launchagent.rs  menubar.rs  mod.rs
scripts/: build-mac.sh  build-windows.ps1  entitlements.plist  smoke-windows-msi.ps1
