[workspace]
members = ["crates/core", "crates/server", "crates/client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/merajmehrabi/kmwarp"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Bytes / serialization
bytes = "1.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Errors
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Small inline-allocated vectors (used by core::edge state machine output)
smallvec = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"

# Pairing / crypto
spake2 = "0.4"
sha2 = "0.10"
hex = "0.4"

# Paths
directories = "5"

# Test deps
proptest = "1"

# Latency probe (optional, gated behind `latency-probe` feature)
hdrhistogram = "7"

# macOS-only platform deps
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

# Windows-only platform deps
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Threading",
] }
windows-service = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
