[workspace]
members = ["crates/core", "crates/server", "crates/client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/merajmehrabi/kmwarp"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Bytes / serialization
bytes = "1.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Errors
thiserror = "2"
anyhow = "1"

# CLI parsing (used by client M10 service subcommands)
clap = { version = "4", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Small inline-allocated vectors (used by core::edge state machine output)
smallvec = "1"

# Bitflag-style enums (used by core::clipboard::ChunkFlags)
bitflags = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"

# Pairing / crypto
spake2 = "0.4"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
getrandom = "0.2"
subtle = "2"
time = { version = "0.3", default-features = false, features = ["std", "macros"] }

# Paths
directories = "5"

# mDNS service discovery (v1.1) — pure Rust, no avahi/bonjour
# system deps. Used by both server (register `_kmwarp._tcp.local.`)
# and client (browse for the server when KMWARP_CONNECT is unset).
mdns-sd = "0.13"

# Test deps
proptest = "1"

# Latency probe (optional, gated behind `latency-probe` feature)
hdrhistogram = "7"

# macOS-only platform deps
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

# Windows-only platform deps
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_Environment",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
] }
windows-service = "0.7"

# v1.1 — system tray icon on Windows. Pure-Rust wrapper around
# Shell_NotifyIconW + the message-only window boilerplate. Default
# features pull GTK on Linux only; we disable them for hygiene because
# we only ever consume tray-icon under cfg(windows).
tray-icon = { version = "0.24", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
