[package]
name = "kmwarp-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "kmwarp Windows client: receives input from a paired macOS server and injects it locally"

[[bin]]
name = "kmwarp-client"
path = "src/main.rs"

[dependencies]
kmwarp-core = { path = "../core" }

tokio = { workspace = true }
bytes = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
spake2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-service = { workspace = true }
