[package]
name = "kmwarp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "kmwarp macOS server: captures input and forwards to a paired Windows client"

[[bin]]
name = "kmwarp-server"
path = "src/main.rs"

[features]
default = []
# Enables the M4 latency-probe harness: a periodic EchoPing emitter and an
# hdrhistogram-backed RTT recorder. Off by default to keep the steady-state
# binary lean. Turn on with `cargo run -p kmwarp-server --features latency-probe`.
latency-probe = ["dep:hdrhistogram"]

[dependencies]
kmwarp-core = { path = "../core" }
hdrhistogram = { workspace = true, optional = true }

tokio = { workspace = true }
bytes = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
spake2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
async-trait = { workspace = true }
core-graphics = { workspace = true }
core-foundation = { workspace = true }
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-foundation = { workspace = true }
