[package]
name = "kmwarp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "kmwarp macOS server: captures input and forwards to a paired Windows client"

[[bin]]
name = "kmwarp-server"
path = "src/main.rs"

[features]
default = []
# Enables the M4 latency-probe harness: a periodic EchoPing emitter and an
# hdrhistogram-backed RTT recorder. Off by default to keep the steady-state
# binary lean. Turn on with `cargo run -p kmwarp-server --features latency-probe`.
latency-probe = ["dep:hdrhistogram"]

[dependencies]
kmwarp-core = { path = "../core" }
hdrhistogram = { workspace = true, optional = true }

tokio = { workspace = true }
bytes = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
spake2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
subtle = { workspace = true }
time = { workspace = true }
clap = { workspace = true }
mdns-sd = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
async-trait = { workspace = true }
core-graphics = { workspace = true }
core-foundation = { workspace = true }
objc2 = { workspace = true }
# objc2-app-kit is feature-gated per Apple class; enable only what each
# subsystem needs.
#   NSPasteboard → M8 clipboard sync
#   NSApplication / NSResponder → menu bar host (service::menubar)
#   NSMenu / NSMenuItem        → menu bar pop-down
#   NSStatusBar / NSStatusItem / NSStatusBarButton → menu bar surface
#   NSButton / NSControl / NSView → required by NSStatusBarButton
#   NSImage → space for future icon swap (optional but cheap)
objc2-app-kit = { workspace = true, features = [
    "NSPasteboard",
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
    "NSMenu",
    "NSMenuItem",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSView",
    "NSImage",
    "NSWindow",
] }
# Foundation features:
#   NSString → existing clipboard usage
#   NSThread → MainThreadMarker::new() (the safe runtime check)
#   NSTimer + NSDate → NSTimer scheduled APIs used by the menubar tick
objc2-foundation = { workspace = true, features = [
    "NSString",
    "NSThread",
    "NSTimer",
    "NSDate",
] }
